почти до делал!!

--- a/index.html
+++ b/index.html
@@ -78,6 +78,33 @@
                 </div>
             </div>
         </section>
+        <section class="macbook">
+            <div class="container-mac">
+                <div class="macbook-content">
+                    <h2 class="mac-store">Store</h2>
+                    <div class="main-mac-content">
+                        <div class="macbook-text-content">
+                            <div class="mac-btn">
+                                <a href="#">Download Windows x64</a>
+                            </div>
+                            <div class="mac-btn2">
+                                <a href="#">Download MacOS</a>
+                            </div>
+                            <h2>Нужна предыдущая версия MPlayer?</h2>
+                            <div class="mac-overview">
+                                <p>Вы можете скачать одну из предыдущих версий MPlayer, которая совместима с нужной вам версией операционной системы и определёнными устройствами.</p>
+                            </div>
+                            <div class="mac-nav">
+                                <a href="#">Выберите предыдущую версию MPlayer</a>
+                            </div>
+                        </div>
+                        <div class="macbook-dev">
+                            <img src="/player_images/Device - Macbook Pro.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
