телефон доделаю потом

--- a/index.html
+++ b/index.html
@@ -106,5 +106,39 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content"> 
+                <div class="footer-nav">
+                    <ul class="footer-nav1">
+                        <li class="footer-nav-head">MPlayer Store</li>
+                        <li>Варианты оплаты</li>
+                        <li>Состояние заказа</li>
+                        <li>Помощь при покупке</li>
+                    </ul>
+                    <ul class="footer-nav2">
+                        <li class="footer-nav-head">Ценности MPlayer</li>
+                        <li>Универсальный доступ</li>
+                        <li>Окружающая среда</li>
+                        <li>Конфиденциальность</li>
+                    </ul>
+                    <ul class="footer-nav3">
+                        <li class="footer-nav-head">Учётная запись</li>
+                        <li>Управление вашим MPlayer ID</li>
+                        <li>Учётная запись MPlayer Store</li>
+                    </ul>
+                </div>
+                <div class="footer-help">
+                    <img src="/player_images/MUSIC PLAYER.png" alt="logo2">
+                    <ul class="footer-help-list">
+                        <li>© MPlayer Inc., 2022 г. Все права защищены.</li>
+                        <li>Условия использования</li>
+                        <li>Продажа и возврат</li>
+                        <li>Юридическая информация</li>
+                    </ul>
+                </div>   
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
